--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -220,6 +220,22 @@ form
 
 
 
+.squad-list
+  .player-position
+    display flex
+    flex-flow row wrap
+    justify-content start
+    align-items start
+    gap 15px
+
+    h3
+      margin-bottom 0
+
+    h3
+    .player-item
+      width 100%
+
+
 .hide
   display none !important
 
