--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -235,6 +235,10 @@ form
     .player-item
       width 100%
 
+    .chart-container
+      width 700px
+      max-width 100%
+
 
 .hide
   display none !important
