--- a/index.css
+++ b/index.css
@@ -1,3 +1,17 @@
+.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  background: center/contain no-repeat;
+}
+.icon.arrow-trend-up {
+  height: 0.9em;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='1em' viewBox='0 0 576 512'%3E%3C!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --%3E%3Cpath fill='%231e771e' d='M384 160c-17.7 0-32-14.3-32-32s14.3-32 32-32H544c17.7 0 32 14.3 32 32V288c0 17.7-14.3 32-32 32s-32-14.3-32-32V205.3L342.6 374.6c-12.5 12.5-32.8 12.5-45.3 0L192 269.3 54.6 406.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l160-160c12.5-12.5 32.8-12.5 45.3 0L320 306.7 466.7 160H384z'/%3E%3C/svg%3E");
+}
+.icon.arrow-trend-down {
+  height: 0.9em;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='1em' viewBox='0 0 576 512'%3E%3C!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --%3E%3Cpath fill='%23771a1a' d='M384 352c-17.7 0-32 14.3-32 32s14.3 32 32 32H544c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32s-32 14.3-32 32v82.7L342.6 137.4c-12.5-12.5-32.8-12.5-45.3 0L192 242.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0L320 205.3 466.7 352H384z'/%3E%3C/svg%3E");
+}
 body {
   font-family: sans-serif;
   line-height: 1.4em;
@@ -14,6 +28,13 @@ ul {
 section {
   margin: 20px 0;
 }
+.buttons {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: start;
+  align-items: start;
+  gap: 5px;
+}
 button,
 input[type='submit'] {
   appearance: none;
@@ -23,10 +44,14 @@ input[type='submit'] {
   padding: 7px 15px;
   transition: background 0.3s ease;
 }
+button.selected,
+input[type='submit'].selected {
+  background: #bdbdbd;
+}
 button:hover,
 input[type='submit']:hover {
   cursor: pointer;
-  background: #d9d9d9;
+  background: #bdbdbd;
 }
 .notification {
   color: #00f;
@@ -179,14 +204,16 @@ form div label {
   .player-item.player-l {
     flex-wrap: nowrap;
     align-items: start;
+    gap: 20px;
   }
   .player-item.player-l .person {
     flex-wrap: wrap;
     justify-content: start;
     align-items: start;
+    width: 130px;
   }
   .player-item.player-l .person img {
-    width: 120px;
+    width: 130px;
     height: 150px;
   }
   .player-item-group.player-l .player-item {
