--- a/index.css
+++ b/index.css
@@ -12,6 +12,23 @@
   height: 0.9em;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='1em' viewBox='0 0 576 512'%3E%3C!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --%3E%3Cpath fill='%23771a1a' d='M384 352c-17.7 0-32 14.3-32 32s14.3 32 32 32H544c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32s-32 14.3-32 32v82.7L342.6 137.4c-12.5-12.5-32.8-12.5-45.3 0L192 242.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160c12.5 12.5 32.8 12.5 45.3 0L320 205.3 466.7 352H384z'/%3E%3C/svg%3E");
 }
+.icon.spinner {
+  position: relative;
+  width: 3em;
+  max-width: 100%;
+  background-position: left;
+  margin: 20px 0;
+}
+.icon.spinner:after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1em;
+  height: 1em;
+  content: '';
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='1em' viewBox='0 0 512 512'%3E%3C!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --%3E%3Cpath d='M417.3 360.1l-71.6-4.8c-5.2-.3-10.3 1.1-14.5 4.2s-7.2 7.4-8.4 12.5l-17.6 69.6C289.5 445.8 273 448 256 448s-33.5-2.2-49.2-6.4L189.2 372c-1.3-5-4.3-9.4-8.4-12.5s-9.3-4.5-14.5-4.2l-71.6 4.8c-17.6-27.2-28.5-59.2-30.4-93.6L125 228.3c4.4-2.8 7.6-7 9.2-11.9s1.4-10.2-.5-15l-26.7-66.6C128 109.2 155.3 89 186.7 76.9l55.2 46c4 3.3 9 5.1 14.1 5.1s10.2-1.8 14.1-5.1l55.2-46c31.3 12.1 58.7 32.3 79.6 57.9l-26.7 66.6c-1.9 4.8-2.1 10.1-.5 15s4.9 9.1 9.2 11.9l60.7 38.2c-1.9 34.4-12.8 66.4-30.4 93.6zM256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm14.1-325.7c-8.4-6.1-19.8-6.1-28.2 0L194 221c-8.4 6.1-11.9 16.9-8.7 26.8l18.3 56.3c3.2 9.9 12.4 16.6 22.8 16.6h59.2c10.4 0 19.6-6.7 22.8-16.6l18.3-56.3c3.2-9.9-.3-20.7-8.7-26.8l-47.9-34.8z'/%3E%3C/svg%3E");
+  animation: spin 3s infinite alternate ease-in-out;
+}
 body {
   font-family: sans-serif;
   line-height: 1.4em;
@@ -21,6 +38,9 @@ h1 {
 }
 h2 {
   margin: 30px 0 20px 0;
+}
+h3 {
+  margin: 20px 0 15px 0;
 }
 ul {
   padding-left: 20px;
@@ -223,5 +243,45 @@ form div label {
 @media (max-width: 599px) {
   .player-item-group.player-l .player-item {
     width: 100%;
+  }
+}
+@-moz-keyframes spin {
+  0% {
+    transform: rotate(0deg);
+    left: 0;
+  }
+  100% {
+    transform: rotate(360deg);
+    left: calc(100% - 1em);
+  }
+}
+@-webkit-keyframes spin {
+  0% {
+    transform: rotate(0deg);
+    left: 0;
+  }
+  100% {
+    transform: rotate(360deg);
+    left: calc(100% - 1em);
+  }
+}
+@-o-keyframes spin {
+  0% {
+    transform: rotate(0deg);
+    left: 0;
+  }
+  100% {
+    transform: rotate(360deg);
+    left: calc(100% - 1em);
+  }
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+    left: 0;
+  }
+  100% {
+    transform: rotate(360deg);
+    left: calc(100% - 1em);
   }
 }
