--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -2,6 +2,9 @@ $color2 = #e5e5e5
 $color2-dark = #bdbdbd
 $color2-light = #f1f1f1
 
+$green = #1e771e
+$red = #771a1a
+
 
 
 @keyframes spin
@@ -224,6 +227,12 @@ form
         width 70px
         height 80px
         object-fit cover
+
+      .offer
+        .good
+          color $green
+        .bad
+          color $red
 
     .chart-container
       width 100%
