--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -297,6 +297,12 @@ form
 
 
 
+@media (min-width: 1399px)
+  .player-item-group
+    &.player-l .player-item
+      width @css{calc((100% - 30px) / 3 - 10px)}
+
+
 @media (min-width: 600px) and (max-width: 899px)
   .player-item
     &.player-l
