--- a/index.css
+++ b/index.css
@@ -229,6 +229,11 @@ form div label {
 .hide {
   display: none !important;
 }
+@media (min-width: 1399px) {
+  .player-item-group.player-l .player-item {
+    width: calc((100% - 30px) / 3 - 10px);
+  }
+}
 @media (min-width: 600px) and (max-width: 899px) {
   .player-item.player-l {
     flex-wrap: nowrap;
