--- a/index.css
+++ b/index.css
@@ -94,6 +94,12 @@ input[type='submit']:hover {
 .notification.success {
   color: #008000;
 }
+.good {
+  color: #1e771e;
+}
+.bad {
+  color: #771a1a;
+}
 form {
   display: flex;
   flex-flow: row wrap;
@@ -181,12 +187,6 @@ form div label {
   width: 70px;
   height: 80px;
   object-fit: cover;
-}
-.player-item.player-l .person .offer .good {
-  color: #1e771e;
-}
-.player-item.player-l .person .offer .bad {
-  color: #771a1a;
 }
 .player-item.player-l .chart-container {
   width: 100%;
