missed matches in stats

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -5,6 +5,11 @@ $color2-light = #f1f1f1
 $green = #1e771e
 $red = #771a1a
 
+// chart
+$blue = #4969be
+$gray = #afafaf
+$purple = #8e43b9
+$orange = #d48e31
 
 
 @keyframes spin
