overview: live points

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -362,3 +362,39 @@ form
   .player-item-group
     &.player-l .player-item
       width 100%
+
+
+
+.carousel
+  position relative
+  width 100%
+  // overflow hidden
+
+  // .left
+  // .right
+  //   position absolute
+  //   width 2vw
+  //   height 2vw
+  //   top 10vw
+  //   background red
+
+  //   &:hover
+  //     cursor pointer
+
+  // .left
+  //   left 0
+
+  // .right
+  //   right 0
+
+  .content
+    // position relative
+    // width 10000px
+    // left @css{calc(50% - 5000px)}
+    display flex
+    flex-flow row nowrap
+    justify-content center
+    align-items start
+    gap 30px
+    margin-left -50px
+
