--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -389,7 +389,9 @@ form
 
   .content-wrap
     width 100%
+    // padding 10px 0
     overflow-x scroll
+    box-shadow inset 10px 0 15px #fff, inset -10px 0 15px #fff
 
     .content
       // position relative
@@ -401,4 +403,12 @@ form
       justify-content center
       align-items start
       gap 30px
+
+      > .item
+        z-index -2
+
+        &:first-child
+          margin-left 20px
+        &:last-child
+          margin-right 20px
 
