--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -206,7 +206,7 @@ form
       background $color2
       padding 5px 10px
 
-      &.pending
+      &.pending .result
         opacity 0.5
 
       &.now .result
