--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -213,13 +213,13 @@ form
         position relative
         font-weight bold
         
-        &:after
+        .live
           position absolute
-          top 0
+          top 0.5px
           left 65px
-          width 30px
+          width 25px
           height 15px
-          content 'LIVE'
+          // content 'LIVE'
           font-weight normal
           font-size 0.7em
           line-height 1.4em
