--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -81,6 +81,16 @@ $orange = #d48e31
     height 0.85em
     background-image url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='1em' viewBox='0 0 448 512'%3E%3C!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --%3E%3Cpath fill='%23771a1a' d='M240 80H342.7c-7.9-19.5-20.4-36.5-36.2-49.9L240 80zm37.7-68.2C261.3 4.2 243.2 0 224 0c-53.7 0-99.7 33.1-118.7 80h81.4l91-68.2zM224 256c70.7 0 128-57.3 128-128c0-5.4-.3-10.8-1-16H97c-.7 5.2-1 10.6-1 16c0 70.7 57.3 128 128 128zM124 312.4c-9.7 3.1-19.1 7-28 11.7V512H243.7L181.5 408.2 124 312.4zm33-7.2L204.3 384H272c44.2 0 80 35.8 80 80c0 18-6 34.6-16 48h82.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3c-7.2 0-14.3 .4-21.3 1.3zM0 482.3C0 498.7 13.3 512 29.7 512H64V345.4C24.9 378.1 0 427.3 0 482.3zM320 464c0-26.5-21.5-48-48-48H223.5l57.1 95.2C303 507.2 320 487.6 320 464z'/%3E%3C/svg%3E")
 
+  &.aligned
+    // height 0.85em
+    background-image url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='16' width='14' viewBox='0 0 448 512'%3E%3C!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--%3E%3Cpath d='M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z'/%3E%3C/svg%3E")
+
+  &.not-aligned
+    // height 1.2em
+    background-image url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='16' width='14' viewBox='0 0 448 512'%3E%3C!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2023 Fonticons, Inc.--%3E%3Cpath d='M160 80c0-26.5 21.5-48 48-48h32c26.5 0 48 21.5 48 48V432c0 26.5-21.5 48-48 48H208c-26.5 0-48-21.5-48-48V80zM0 272c0-26.5 21.5-48 48-48H80c26.5 0 48 21.5 48 48V432c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V272zM368 96h32c26.5 0 48 21.5 48 48V432c0 26.5-21.5 48-48 48H368c-26.5 0-48-21.5-48-48V144c0-26.5 21.5-48 48-48z'/%3E%3C/svg%3E")
+    transform rotate(180deg)
+
+
 
 
 
@@ -133,6 +143,11 @@ input[type='submit']
   &:hover
     cursor pointer
     background $color2-dark
+
+
+  &.align-matches
+    margin 0 15px
+    padding 3px 5px
 
   
 .notification
@@ -199,52 +214,58 @@ form
     .match-info
       display flex
       flex-flow row wrap
-      gap 7px
+      justify-content stretch
+      align-items start
+      gap 9px
 
       > *
         width 100%
 
-    .match-banner
-      display flex
-      flex-flow row nowrap
-      justify-content space-between
-      align-items center
-      background $color2
-      padding 5px 10px
+      .match-banner
+        display flex
+        flex-flow row nowrap
+        justify-content space-between
+        align-items center
+        background $color2
+        padding 5px 10px
 
-      &.pending .result
-        opacity 0.5
+        &.pending .result
+          opacity 0.5
 
-      &.now .result
-        position relative
-        font-weight bold
-        
-        .live
-          position absolute
-          top 0.5px
-          left 65px
-          width 25px
-          height 15px
-          font-weight normal
+        &.now .result
+          position relative
+          font-weight bold
+          
+          .live
+            position absolute
+            top 0.5px
+            left 65px
+            width 25px
+            height 15px
+            font-weight normal
+            font-size 0.7em
+            line-height 1.4em
+            padding 2px 2px 1px 2px
+            color #fff
+            background $green
+            animation blink 1s infinite
+
+        .team-icon
+          display block
+          width 30px
+          height 30px
+          object-fit contain
+
+        .info
+          text-align center
+
+        .time
           font-size 0.7em
-          line-height 1.4em
-          padding 2px 2px 1px 2px
-          color #fff
-          background $green
-          animation blink 1s infinite
+          line-height 1.8em
 
-      .team-icon
-        display block
-        width 30px
-        height 30px
-        object-fit contain
 
-      .info
-        text-align center
-
-      .time
-        font-size 0.7em
-        line-height 1.8em
+      .player-item
+        height 20px
 
     // ul
     //   list-style-type none
@@ -414,6 +435,7 @@ form
   .content-wrap
     width 100%
     // padding 10px 0
+    padding-bottom 20px
     box-shadow inset 10px 0 15px #fff, inset -10px 0 15px #fff
 
     overflow-x scroll
