overview style improvements

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -299,6 +299,14 @@ form
     text-align center
   
 
+  &.player-s
+    .player-name
+      width 173px
+      overflow hidden
+      white-space nowrap
+      text-overflow clip
+
+
   &.player-l
     .person
       display flex
